# IwEngine

./: .editorconfig  .gitignore  .gitmodules  Bootstrap.bat  Build.bat  BuildC.bat  BuildD.bat  BuildI.bat  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  CreateProjects.bat  Export.bat  ExportDebug.bat  ExportRelease.bat  Iw.props  IwEngine.sln  README.md  Remote.bat  copyasset.bat  copyjustlevels.bat  copyjustshaders.bat  premake5.lua  premake52.lua  rundisdebug.bat
Games/: CreateProject.bat  (+1 more)
IwEcs/: CMakeLists.txt  IwEcs.vcxproj  IwEcs.vcxproj.filters  level.json  premake5.lua
IwEcs/include/: archtype.h  chunk.h  chunk_iterator.h  component_array.h  component_data.h  component_list.h  component_registry.h  component_view.h  ecs_manager.h  entity_manager.h  iwecs.h  memory_chunk.h  registry.h  system.h  system_manager.h  type_identifier.h
IwEcs/include/component/: archetype.h  bag.h  bag_view.h  component_bag.h  component_group.h  component_map.h  factory.h  group.h  view.h
IwEcs/include/core/: registry.h
IwEcs/include/entity/: registry.h
IwEcs/include/iw/: iwent.h
IwEcs/include/iw/component/: archetype.h  group.h  view.h
IwEcs/include/iw/entity/: entity_traits.h
IwEcs/include/iw/space/: active_subspace.h  space.h
IwEcs/include/space/: common_space.h  space.h  sub_space.h  subspace.h
IwEcs/src/: ecs_manager.cpp  entity_manager.cpp
IwEngine/: CMakeLists.txt  CMakeLists2.txt  IwEngine.vcxproj  IwEngine.vcxproj.filters  premake5.lua
IwEngine/include/: Application.h  Core.h  EntryPoint.h  Event.h  Layer.h  LayerStack.h  Space.h  Window.h  iwengine.h
IwEngine/include/Core/: Application.h  EntryPoint.h
IwEngine/src/: Application.cpp  EntryPoint.cpp  Layer.cpp  LayerStack.cpp
IwEngine/src/Platform/: WindowsWindow.cpp
IwEngine/src/audio/: AudioSpace.cpp  AudioSpaceRaw.cpp  AudioSpaceStudio.cpp  CHECK_ERROR.h  FMODAudioSpace.cpp
IwEngine/src/common/: Transform.cpp
IwEngine/src/data/: Transform.cpp
IwEngine/src/engine/: Application.cpp  Assets.cpp  Console.cpp  EventBus.cpp  Layer.cpp  LayerStack.cpp  Time.cpp
IwEngine/src/entity/: ArchetypeManager.cpp  Chunk.cpp  ChunkList.cpp  Component.cpp  ComponentManager.cpp  EntityComponentArray.cpp  EntityHandle.cpp  EntityManager.cpp  Prefab.cpp  Space.cpp
IwEngine/src/entity2/: Archetype.cpp  ArchetypeArray.cpp  ArchetypeData.cpp  ArchetypeManager.cpp  Chunk.cpp  ComponentArray.cpp  EntityArray.cpp  EntityManager.cpp  Space.cpp  View.cpp
IwEngine/src/events/: event_seq.cpp  eventbus.cpp
IwEngine/src/graphics/: Bone.cpp  Camera.cpp  ComputeShader.cpp  DirectionalLight.cpp  Font.cpp  IndexBuffer.cpp  Light.cpp  Material.cpp  Mesh.cpp  MeshFactory.cpp  Pipeline.cpp  PointLight.cpp  QueuedDevice.cpp  QueuedRenderer.cpp  RenderQueue.cpp  RenderTarget.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  TextureAtlas.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  VoxelLight.cpp
IwEngine/src/input/: Context.cpp  ContextManager.cpp  DeviceManager.cpp  InputManager.cpp  input_manager.cpp  iwinput_events.h
IwEngine/src/log/: effects.cpp  logger.cpp
IwEngine/src/math/: iwmath.cpp  matrix.cpp  matrix2.cpp  matrix3.cpp  matrix4.cpp  noise.cpp  quaternion.cpp  vector2.cpp  vector3.cpp  vector4.cpp
IwEngine/src/math-busted/: iwmath.cpp  matrix2.cpp  noise.cpp  quaternion.cpp  vector2.cpp  vector3.cpp
IwEngine/src/physics/: AABB.cpp  Ray.cpp
IwEngine/src/renderer/: IndexBuffer.cpp  Mesh.cpp  Renderer.cpp  ShaderProgram.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
IwEngine/src/util/: File.cpp
IwEvents/: CMakeLists.txt  IwEvents.vcxproj  IwEvents.vcxproj.filters  premake5.lua
IwEvents/include/: event_bus.h  iwevents.h  signal.h
IwEvents/include/iw/: signal.h
IwInput/: CMakeLists.txt  IwInput.vcxproj  IwInput.vcxproj.filters  premake5.lua
IwInput/include/: input_device.h  input_manager.h  input_state.h  iwinput.h
IwInput/src/: input_manager.cpp  iwinput_events.h
IwInput/src/impl/: impl_input_context.h  impl_input_device.cpp  impl_input_device.h  impl_input_manager.cpp  impl_input_manager.h  impl_input_state.cpp  impl_input_state.h
IwMath/: CMakeLists.txt  IwMath.vcxproj  IwMath.vcxproj.filters  premake5.lua
IwMath/include/: iwmath.h  matrix2.h  matrix3.h  matrix4.h  quaternion.h  vector2.h  vector3.h  vector4.h
IwMath/include/iw/: matrix2.h  matrix4.h  vector3.h
IwMath/src/: iwmath.cpp  matrix2.cpp  matrix3.cpp  matrix4.cpp  quaternion.cpp  vector2.cpp  vector3.cpp  vector4.cpp
IwUtil/: CMakeLists.txt  IwUtil.vcxproj  IwUtil.vcxproj.filters  premake5.lua
IwUtil/include/: action.h  archetype.h  archtype.h  array_pack.h  bimap.h  compact_array.h  compiled_sequence.h  ct_iteration.h  identifiable.h  input_iterator.h  input_iterator_pack.h  iwutil.h  pack_input_iterator.h  pack_iteration.h  sparse_set.h  sprase_set.h  tight_array.h  tight_array2.h  tight_container.h  tight_vector.h  tuple.h  tuple_iteration.h  type_id.h  type_identifier.h
IwUtil/include/iw/: action.h
IwUtil/include/set/: bag.h  sparse_set.h
IwUtil/include/type/: type_group.h  type_id.h  type_index.h  type_traits.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters  Source.cpp  premake5.lua
Sandbox/assets/: huh.mtl  snek.dae  t.dae  t.mtl
Sandbox/assets/shaders/: elfs.glsl  elvs.glsl  pbr.shader  sandbox_line_fs.glsl  sandboxfs.glsl  sandboxvs.glsl
Sandbox/include/Components/: Bullet.h  Enemy.h  Player.h
Sandbox/include/Layers/: GameLayer.h  GameLayer3D.h
Sandbox/include/Systems/: BulletSystem.h  EnemySystem.h  PlayerSystem.h
Sandbox/res/: cube2.mtl  default.shader  defaultfs.glsl  defaultvs.glsl  elfs.1.glsl  elvs.1.glsl  sandbox_line_fs.glsl  sandbox_line_vs.glsl  sandboxfs.glsl  sandboxgs.glsl  sandboxvs.glsl  sphere.mtl  tree2.mtl
Sandbox/res/pbr/: pbrfs.glsl  pbrvs.glsl
Sandbox/src/: BulletSystem.cpp  BulletSystem.h  GameLayer.cpp  GameLayer.h  Source.cpp
Sandbox/src/Components/: Enemy.h
Sandbox/src/Layers/: GameLayer.cpp  GameLayer3D.cpp
Sandbox/src/Systems/: BulletSystem.cpp  EnemySystem.cpp  PlayerSystem.cpp
(+1555 files in other folders)
